<resources>
    <string name="app_name">Sekko</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="movie">电影</string>
    <string name="cinema">影院</string>
    <string name="dating">约电影</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- card description -->
    <string name="director">导演／主演：</string>
    <string name="time">上映日期：</string>
    <string name="period">片长／语言：</string>
    <string name="type">类型：</string>
    <string name="someone">someone</string>

    <!-- fake comment -->

    <string name="comment1">近期值得推荐的一部电影，文艺片里还算不沉闷的，毕竟刘亦菲颜值太高，抛去这些，几位主演的表现可圈可点，看得出是一部用心之作看到熟悉场景在荧幕上焕发恢弘壮美内心充盈感动，变羊和鱼人等小细节也能让玩家会心一笑，高精矮人都事先露脸打个酱油，魔兽庞杂的体系要讲清楚单靠一部电影远远不够，敲碗等续集。片尾没有还原推平暴风城大概是出于照顾非玩家观众的感受，作为LM心满意足。PS：洛萨你..丧子之痛也不能饥不择食啊..。</string>
    <string name="from1">来自：蜘蛛电影票网页版 2016-06-08 14:42:34</string>
    <string name="comment2">电影完了以后，有人喊：“有没有回暴风城的？”</string>
    <string name="from2">来自：蜘蛛电影票网页版 2016-06-08 20:21:35</string>
    <string name="comment3">传奇电影公司完全没有深入理解暴雪公司对游戏的刻画，整个电影人物稀少，剧情简单枯燥，完全没有描绘出魔兽本来丰富的背景，人物设定，剧情脉络，希望暴雪将来能自己出来拍自己的作品。</string>
    <string name="comment4">是时候让小时代的粉丝们知道什么才叫脑残粉了。</string>
    <string name="from3">来自：蜘蛛电影票网页版2016-06-08 13:07:00</string>
    <string name="from4">来自：蜘蛛电影票网页版2016-06-08 12:01:18</string>


        <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_cinema_detail">CinemaDetailActivity</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="ttomorrow">后天</string>
    <string name="yuan">元</string>
    <string name="login_name">name</string>
    <string name="login_password">password</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="cancel">cancel</string>
    <string name="ccancel">取消</string>
    <string name="commit">确认</string>

    <string-array name="area">
        <item> 白云区 </item>
        <item> 天河区 </item>
        <item> 海珠区 </item>
        <item> 番禺区 </item>
        <item> 荔湾区 </item>
        <item> 越秀区 </item>
        <item> 花都区 </item>
        <item> 黄浦区 </item>
        <item> 南沙区 </item>
    </string-array>

    <string name="noSchedule">该影片今日没有安排，看看别的吧 :-)</string>

</resources>
