<android.support.v4.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/content_white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.guanlu.sekko.CinemaDetailActivity"
    tools:showIn="@layout/activity_cinema_detail">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.example.guanlu.sekko.GalleryFlow
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spacing = "20dp"
            android:id="@+id/order_gallery">
        </com.example.guanlu.sekko.GalleryFlow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:background="@color/content_gray">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/content_white"
                android:background="@android:color/background_dark"
                android:id="@+id/button1"
                android:text="@string/today"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:textColor="@color/content_white"
                android:background="@color/content_gray"

                android:text="@string/tomorrow"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:textColor="@color/content_white"
                android:background="@color/content_gray"

                android:text="@string/ttomorrow"/>

        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/movie_schedule">
        </ListView>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

