<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/content_bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".viewConctroller.CinemaDetailActivity"
    tools:showIn="@layout/activity_cinema_detail">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/content_bg">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/area_spinner"
            android:paddingLeft="10dp"
            />
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:layout_marginBottom="20dp"
            android:scrollbars="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:id="@+id/div_label"
                android:orientation="horizontal"
                android:background="@color/content_white"
                android:paddingBottom="10dp">

            </LinearLayout>


        </HorizontalScrollView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/content_gray"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_margin="0dp"
                android:padding="0dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:id="@+id/btn_bg"
                    android:background="@android:color/background_dark"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="0dp"
                android:padding="0dp">

                <Button
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:textColor="@color/content_white"
                    android:id="@+id/btn1"
                    android:background="#00000000"
                    android:text="@string/today"/>
                <Button
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:id="@+id/btn2"
                    android:background="#00000000"
                    android:textColor="@color/content_white"

                    android:text="@string/tomorrow"/>
                <Button
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:id="@+id/btn3"
                    android:background="#00000000"
                    android:textColor="@color/content_white"

                    android:text="@string/ttomorrow"/>

            </LinearLayout>


        </RelativeLayout>

        <TextView
            android:visibility="gone"
            android:layout_margin="40dp"
            android:id="@+id/noSchedule2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/noSchedule"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/content_white"
            android:id="@+id/movie_schedule2">
        </ListView>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>