<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/content_bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".viewConctroller.MovieDetailActivity"
    tools:showIn="@layout/activity_movie_detail">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        >

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@android:color/white"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20sp"
                android:paddingBottom="@dimen/card_vertical_margin"
                android:paddingTop="@dimen/card_vertical_margin" >


                <TextView
                    android:id="@+id/label_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_type"
                    android:textColor="@color/content_black"
                    android:layout_toRightOf="@id/label_type"/>
                <TextView
                    android:id="@+id/label_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_type"
                    android:text="@string/time"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_time"
                    android:textColor="@color/nav_black"
                    android:layout_below="@id/text_type"
                    android:text="@string/time"
                    android:layout_toRightOf="@id/label_time"/>

                <TextView
                    android:id="@+id/label_period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_time"
                    android:text="@string/period"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_period"
                    android:textColor="@color/content_black"
                    android:layout_toRightOf="@id/label_period"
                    android:layout_below="@id/label_time"/>

                <TextView
                    android:id="@+id/label_director"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_period"
                    android:text="@string/director"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_director"
                    android:textColor="@color/content_black"
                    android:layout_toRightOf="@id/label_director"
                    android:layout_below="@id/label_period"/>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@android:color/white"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20sp"
                android:paddingBottom="@dimen/card_vertical_margin"
                android:paddingTop="@dimen/card_vertical_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_story"
                    android:lineSpacingMultiplier="1.3"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>